fix: add gap for toolbsr on dark theme

--- a/css/themes/_dark-theme.css
+++ b/css/themes/_dark-theme.css
@@ -8,3 +8,6 @@
 .dark-theme #map {
   filter: invert(50%);
 }
+.dark-theme .toolbar {
+  gap: 10px;
+}
